load("@io_bazel_rules_go//go:def.bzl", "go_test")

# gazelle:go_test file

go_test(
    name = "http_relay_test",
    srcs = ["http_relay_test.go"],
    deps = [
        "//src/go/cmd/http-relay-client/client:go_default_library",
        "//src/go/cmd/http-relay-server/server:go_default_library",
    ],
)
